# vex-vision-scoring

./: LICENSE  README.md
vex-vision-scoring/: Cargo.toml  Dockerfile
vex-vision-scoring/client/: Cargo.toml
vex-vision-scoring/client/src/: lib.rs
vex-vision-scoring/server/: Cargo.toml
vex-vision-scoring/server/src/: main.rs
vex-vision-scoring/src/: main.rs
vex-vision-scoring/static/: index.html
