[package]
name = "vex-vision-scoring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
opencv = "0.79"
gstreamer = "0.20"
onnxruntime = "0.19"