[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "Navigator", "MediaDevices", "MediaStream", "MediaStreamConstraints",
  "MediaStreamTrack", "HtmlSelectElement", "HtmlVideoElement",
  "Document", "Window", "HtmlOptionElement", "console", "DomException"
] }
js-sys = "0.3"
