[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
serde-wasm-bindgen = "0.6.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
web-sys = { version = "0.3.77", features = [
  "Window", "Document", "HtmlElement", "HtmlButtonElement", "HtmlDivElement",
  "Response", "Request", "RequestInit", "Headers",
  "console", "DomException", "EventTarget",  "HtmlSelectElement",
  "HtmlVideoElement", "MediaStreamConstraints", "MediaStream", "MediaDeviceInfo", "Navigator", "MediaStreamTrack"
]}
js-sys = "0.3.77"
